--- a/src/app/accounts/debit/debit.component.html
+++ b/src/app/accounts/debit/debit.component.html
@@ -13,25 +13,133 @@ width: 500px;
     <!-------  Form to search accounts -->
 
 
+    <form class="example-form" [formGroup]="accountForm" (ngSubmit)="onSubmit()">
+        <div class="title">
+          <h2>Debit account</h2>
+        </div>
 
-  <form class="example-form">
-    <mat-form-field class="example-full-width">
-      <mat-label>Number</mat-label>
-      <input type="text"
-            placeholder="Pick one"
-            aria-label="Number"
-            matInput
-            [formControl]="myControl"
-            [matAutocomplete]="auto">
-      <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete">
-        <mat-option *ngFor="let option of filteredOptions | async" [value]="option.owner"
+        <!----------------------------->
+
+        <mat-form-field appearance="outline" >
+          <mat-label>Current balance</mat-label>
+          <input matInput type="text"
+            placeholder="Current balance"
+            formControlName="balanceBefore"
+            [ngClass]="{ 'is-invalid': submitted && _fC['balanceBefore'].errors }"
+
+           >
+           <span *ngIf="submitted && _fC['balanceBefore'].errors" class="invalid-feedback">
+            <span *ngIf="_fC['balanceBefore'].errors['required']">The current Balance is required</span>
+
+          </span>
+
+          <mat-icon matSuffix>done</mat-icon>
+        </mat-form-field>
+
+        <!----------------------------------->
+        <mat-form-field appearance="outline">
+          <mat-label>Owner</mat-label>
+          <input matInput placeholder="Owner" type="text"
+          formControlName="owner"
+          [ngClass]="{ 'is-invalid': submitted && _fC['owner'].errors }"
+
         >
-          {{option.owner}}
-        </mat-option>
-      </mat-autocomplete>
-    </mat-form-field>
-  </form>
+          <span *ngIf="submitted && _fC['owner'].errors" class="invalid-feedback">
+            <span *ngIf="_fC['owner'].errors['required']">The owner is required</span>
+            <span *ngIf="_fC['owner'].errors['maxlength']">
+              The owner must not exceed 200 characters
+            </span>
+            <span *ngIf="_fC['owner'].errors['pattern']">
+              This field accepts only characters as value
+            </span>
+          </span>
+          <mat-icon matSuffix>done</mat-icon>
+        </mat-form-field>
 
+        <!----------------------------->
+
+        <mat-form-field appearance="outline">
+          <mat-label>Account number</mat-label>
+          <input matInput type="text"
+            placeholder="Account number"
+            formControlName="account"
+            [ngClass]="{ 'is-invalid': submitted && _fC['account'].errors }"
+            readonly="true"
+           >
+           <span *ngIf="submitted && _fC['account'].errors" class="invalid-feedback">
+            <span *ngIf="_fC['account'].errors['required']">The account number is required</span>
+
+            <span *ngIf="_fC['account'].errors['maxlength']">
+              The account number must not exceed 13 characters
+            </span>
+            <span *ngIf="_fC['account'].errors['minlength']">
+              The account number must have at least 13 characters
+            </span>
+            <span *ngIf="_fC['account'].errors['pattern']">
+              This field accepts only numbers as value
+            </span>
+          </span>
+          <!--<mat-hint align="end">{{input.value.length}}/10</mat-hint>-->
+          <mat-icon matSuffix>done</mat-icon>
+        </mat-form-field>
+
+        <!------------------------------------------------>
+        <mat-form-field appearance="outline">
+          <mat-label>Amount</mat-label>
+          <input matInput placeholder="Amount" type="text"
+          formControlName="amount"
+          [ngClass]="{ 'is-invalid': submitted && _fC['amount'].errors }"
+        >
+          <span *ngIf="submitted && _fC['amount'].errors" class="invalid-feedback">
+            <span *ngIf="_fC['amount'].errors['required']">The amount is required</span>
+          </span>
+          <mat-icon matSuffix>done</mat-icon>
+        </mat-form-field>
+
+        <!----------------------------------->
+        <mat-form-field appearance="outline">
+          <mat-label>Operator</mat-label>
+          <input matInput placeholder="Operator" type="text"
+          formControlName="operator"
+          [ngClass]="{ 'is-invalid': submitted && _fC['operator'].errors }"
+        >
+          <span *ngIf="submitted && _fC['operator'].errors" class="invalid-feedback">
+            <span *ngIf="_fC['operator'].errors['required']">The operator is required</span>
+            <span *ngIf="_fC['operator'].errors['maxlength']">
+              The operator must not exceed 200 characters
+            </span>
+            <span *ngIf="_fC['operator'].errors['pattern']">
+              This field accepts only characters as value
+            </span>
+          </span>
+          <mat-icon matSuffix>done</mat-icon>
+        </mat-form-field>
+
+         <!--  DatePicker -->
+
+         <mat-form-field appearance="outline">
+          <mat-label>Created at</mat-label>
+          <input matInput [matDatepicker]="picker3" formControlName="createdAt"
+          [ngClass]="{ 'is-invalid': submitted && _fC['createdAt'].errors }" [value]="date.value"
+
+          >
+          <mat-hint>MM/DD/YYYY</mat-hint>
+          <mat-datepicker-toggle matIconSuffix [for]="picker3" disabled="false"></mat-datepicker-toggle>
+          <mat-datepicker #picker3></mat-datepicker>
+
+          <span *ngIf="submitted && _fC['createdAt'].errors" class="invalid-feedback">
+            <span *ngIf="_fC['createdAt'].errors['required']">The data is required</span>
+            <span *ngIf="_fC['createdAt'].errors['maxlength']">
+              The date must not exceed 9 characters
+            </span>
+          </span>
+        </mat-form-field>
+
+
+        <div class="example-button-row">
+          <button mat-raised-button type="submit" color="primary">Submit</button>
+        </div>
+    </form>
 
 
   </div>
