--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -364,6 +364,14 @@
     <main>
       <div class="container">
         <h1>Sign Up to our Platform</h1>
+
+        <br>
+            <div class="example-button-row">
+              <a mat-button routerLink="/login" >Sign In</a>
+              <a routerLink="/login" rel="noopener">
+                <svg class="material-icons" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z" fill="#1976d2"/><path d="M0 0h24v24H0z" fill="none"/></svg>
+              </a>
+            </div>
       </div>
     </main>
 
