--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -46,7 +46,23 @@
 
 <mat-drawer-container class="example-container">
   <mat-drawer mode="side" opened class="sidbar">
+
+
     <mat-list role="list">
+      <mat-list-item role="listitem" style="align-items: center; text-align: center;">
+        <button mat-icon-button aria-label="Example icon button with a vertical three dot icon" >
+          <mat-icon>account_circle</mat-icon>
+        </button>
+      </mat-list-item>
+      <mat-list-item role="listitem" style="align-items: center; text-align: center;">
+        <a mat-button href="#" disabled style="font-size: .9rem; color: rgb(11, 141, 22);font-weight: bold;text-transform: uppercase;" >
+          {{username.username}}
+        </a>
+        <p style="font-size: .7rem; color: rgb(22, 82, 247); margin-top: -10%;">{{username.role}}</p>
+      </mat-list-item>
+
+      <mat-divider></mat-divider>
+
       <button mat-button [routerLink]="['/']" >
         <mat-icon>account_balance</mat-icon>
         Home
@@ -56,8 +72,8 @@
           <mat-icon>supervised_user_circle</mat-icon>
           Users</button>
       </mat-list-item>
-      <mat-list-item role="listitem">
-        <button mat-button [matMenuTriggerFor]="aboveMenu">
+      <mat-list-item role="listitem" *ngIf="username.role == 'ROOT'">
+        <button mat-button [matMenuTriggerFor]="aboveMenu" >
           <mat-icon>account_box</mat-icon>
           Accounts
         </button>
