--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -72,7 +72,7 @@
           <mat-icon>supervised_user_circle</mat-icon>
           Users</button>
       </mat-list-item>
-      <mat-list-item role="listitem" *ngIf="username.role == 'ROOT'">
+      <mat-list-item role="listitem" *ngIf="username.role == 'ROOT' || username.role == 'AMIN'">
         <button mat-button [matMenuTriggerFor]="aboveMenu" >
           <mat-icon>account_box</mat-icon>
           Accounts
@@ -103,7 +103,7 @@
           <button mat-menu-item>List Credits</button>
         </mat-menu>
       </mat-list-item>
-      <mat-list-item role="listitem">
+      <mat-list-item role="listitem" *ngIf="username.role == 'ROOT' || username.role == 'AMIN'">
         <button mat-button (click)="account()">
           <mat-icon>settings</mat-icon>
           Settings
