--- a/src/app/accounts/add-account/add-account.component.html
+++ b/src/app/accounts/add-account/add-account.component.html
@@ -141,7 +141,7 @@ width: 500px;
               The ownerDoc filed must not exceed 10 characters
             </span>
             <span *ngIf="_fC['ownerDoc'].errors['pattern']">
-              This field accepts only characters as value
+              This field accepts only numbers with no zero at the begining
             </span>
           </span>
           <mat-icon matSuffix>done</mat-icon>
