--- a/src/app/accounts/historic/historic.component.html
+++ b/src/app/accounts/historic/historic.component.html
@@ -1,19 +1,17 @@
-<div class="mat-elevation-z8">
-  <table mat-table [dataSource]="dataSource">
-
-    <!-- Position Column -->
-    <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef> No. </th>
-      <td mat-cell *matCellDef="let element"> {{element.id}} </td>
-    </ng-container>
 
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
+<mat-card>
+  <mat-card-header>
+    <mat-card-title>Current balance: </mat-card-title>
+    <mat-card-subtitle><span style="font-size: 2rem;color: rgb(37, 167, 123); font-weight: bold;">
+      {{ currentBalance }}
+    </span></mat-card-subtitle>
+  </mat-card-header>
 
-  <mat-paginator [pageSizeOptions]="[5, 10, 20]"
-                 showFirstLastButtons
-                 aria-label="Select page of periodic elements">
-  </mat-paginator>
-</div>
+  <mat-card-actions align="end">
+    <mat-card-title>Account: <span style="color: rgb(50, 109, 236);">{{ userAccount }}</span> </mat-card-title>
+    <button mat-button>LIKE</button>
+    <button mat-button>SHARE</button>
+  </mat-card-actions>
+
+</mat-card>
