--- a/src/app/accounts/home-account/home-account.component.html
+++ b/src/app/accounts/home-account/home-account.component.html
@@ -20,6 +20,8 @@
       Add
     </button>
 
+    <mat-divider></mat-divider>
+    <br>
  <!---
     <div>
       <h1>Angular 13 HTML Table Example</h1>
@@ -76,7 +78,7 @@
 
   <router-outlet></router-outlet>
 
-  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" >
 
     <!--- Note that these columns can be defined in any order.
           The actual rendered columns are set as a property on the row definition" -->
@@ -129,15 +131,15 @@
       <td mat-cell *matCellDef="let element">
         <button mat-raised-button color="primary" [matMenuTriggerFor]="menu" >Options</button>
         <mat-menu #menu="matMenu">
-          <button mat-menu-item [routerLink]="['/account/edit/',element.id]" >
+          <button mat-menu-item (click)="accountEdit(element.id)" >
             <mat-icon color="primary">edit</mat-icon>
             Edit
           </button>
-          <button mat-menu-item [routerLink]="['/account/trans/debit/',element.id]" >
+          <button mat-menu-item (click)="accountDebit(element.id)" >
             <mat-icon color="warn">remove_circle_outline</mat-icon>
             Debit
           </button>
-          <button mat-menu-item [routerLink]="['/account/trans/credit/',element.id]" >
+          <button mat-menu-item (click)="accountCredit(element.id)" >
             <mat-icon color="basic">add_circle_outline</mat-icon>
             Credit
           </button>
