--- a/src/app/accounts/home-account/home-account.component.html
+++ b/src/app/accounts/home-account/home-account.component.html
@@ -20,6 +20,11 @@
       Add
     </button>
 
+    <button mat-raised-button color="primary" routerLink="/login">
+      <mat-icon>add_circle</mat-icon>
+      +
+    </button>
+
     <mat-divider></mat-divider>
     <br>
  <!---
@@ -139,7 +144,7 @@
             <mat-icon color="warn">remove_circle_outline</mat-icon>
             Debit
           </button>
-          <button mat-menu-item (click)="accountCredit(element.id)" >
+          <button mat-menu-item [routerLink]="['account/trans/credit/',1]" >
             <mat-icon color="basic">add_circle_outline</mat-icon>
             Credit
           </button>
