--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -118,5 +118,8 @@
 
     <router-outlet></router-outlet>
 
+    <!--     to send data to the child component-->
+
+
   </mat-drawer-content>
 </mat-drawer-container>
