--- a/src/app/auth/signin/signin.component.html
+++ b/src/app/auth/signin/signin.component.html
@@ -509,6 +509,11 @@
 
 </div>
 
+
+<!-------LOADER SPINNER  START  -->
+ <app-loader-spinner></app-loader-spinner>
+<!-------LOADER SPINNER  END  -->
+
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content above * * * * * * * * * * * -->
 <!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * -->
