--- a/src/app/auth/signout/signout.component.html
+++ b/src/app/auth/signout/signout.component.html
@@ -1,1 +1,4 @@
-<p>signout works!</p>
+<button mat-menu-item (click)="signOut()" class="btn-logout">
+  <mat-icon>login</mat-icon>
+  <span>Logout</span>
+</button>
