--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -46,7 +46,7 @@
    </mat-toolbar>
 
 <mat-drawer-container class="example-container">
-  <mat-drawer mode="side" opened class="sidbar">
+  <mat-drawer mode="side" opened class="sidbar" *ngIf="username.isActive">
 
 
     <mat-list role="list">
