--- a/src/app/user-page/user-page.component.html
+++ b/src/app/user-page/user-page.component.html
@@ -9,15 +9,15 @@
       <div class="header">
         <h2>Total balance</h2>
         <div>
-          <mat-icon class="currency">{{ currency[1].icon }}</mat-icon>
-          <span>{{ totalBalance }} {{ currency[0].currency }}</span>
+          <mat-icon class="currency">{{ currenc[1].icon }}</mat-icon>
+          <span>{{ totalBalance }} {{ currenc[0].currency }}</span>
         </div>
       </div>
 
       <div class="box-card">
         <div class="card" (click)="open()">
-          <img src="{{currency[0].flag}}" width="60" height="60" alt="currency-flag" srcset="" >
-          <span id="currency">{{ currency[0].currency }}</span>
+          <img src="{{currenc[0].flag}}" width="60" height="60" alt="currency-flag" srcset="" >
+          <span id="currency">{{ currenc[0].currency }}</span>
           <span id="balance" >
             {{ totalBalance }}
           </span>
@@ -53,19 +53,19 @@
 
       <!---------- LIST OF  TRANSACTIONS  ------->
 
-      <div class="list">
+      <div class="list" *ngFor="let item of dataList">
         <div class="box">
           <div class="date">
-            <h2>18 January</h2>
+            <h2>{{ item.createdAt }}</h2>
           </div>
           <div class="operation">
             <div class="mov">
               <span><mat-icon>add</mat-icon></span>
               <div id="operator">
-                <h2>Operatorssss</h2>
-                <p>Received</p>
+                <h2>{{ item.operator }}</h2>
+                <p>{{ item.status }}</p>
               </div>
-              <div id="amount"><h1> + {{ totalBalance }} {{ currency[0].currency }}</h1></div>
+              <div id="amount"><h1> + {{ item.balanceAfter  }} {{ currenc[0].currency }}</h1></div>
             </div>
           </div>
         </div>
