--- a/src/app/accounts/balance/balance.component.html
+++ b/src/app/accounts/balance/balance.component.html
@@ -1,1 +1,7 @@
-<p>balance works!</p>
+<app-main-window page="Balance">
+
+  <div class="container">
+    This is Account
+    <button routerLink="/acc">Account</button>
+  </div>
+</app-main-window>
