--- a/src/app/accounts/accounts.component.css
+++ b/src/app/accounts/accounts.component.css
@@ -1,72 +1,38 @@
 
-.signup{
-  color: antiquewhite;
+.container{
+  display: block;
+  flex-direction: column;
+}
+
+.container .header{
+  width: 100%;
+  padding: .7rem ;
+  display: flex;
+}
+
+.container .header .form{
+  width: 30%;
   padding: .3rem;
-  margin-top: 5%;
+  border-radius: 2rem;
+  background-color: rgba(61, 61, 61, 0.32);
 }
 
-.signup a{
-  padding: .3rem 1rem;
-
-}
-
-.signup a:hover{
-  padding: .5rem 1.6rem;
-  background: #3e485e;
-  border-radius: 1rem;
-  box-shadow: -.1rem .1rem rgba(22, 23, 22, .5);
-  color: #FFF;
-  transition: 1s;
-  cursor: pointer;
-  font-size: 1rem;
-}
-
-
-.example-container mat-form-field + mat-form-field {
-  margin-left: 8px;
-}
-
-.box-form{
-  position: absolute;
-  margin-top: 12%;
-  margin-left: 35%;
-  background: rgba(22, 23, 22, .5);
-  padding: 7rem 8rem;
-}
-
-.example-form,
-.example-full-width{
+.container .header .form button{
+  width: 10%;
+  border: 0;
   background: transparent;
+  color: rgb(228, 228, 228);
+  outline: none;
 }
 
-
-.example-button-row button,
-.example-button-row a {
-  margin-right: 8px;
+.container .header .form button i{
+  transform: scale(1.4);
 }
 
-.example-disabled {
-  display: inline-block;
-}
-
-
-.password{
-  margin-top: 2%;
-}
-
-mat-form-field, mat-label, .input{
-  color: aliceblue;
-}
-
-.btn-pwd{
+.container .header .form .search{
+  border: 0;
+  width: 88%;
+  outline: none;
   background: transparent;
-  border: none;
-  color: aliceblue;
-}
-
-.btn-submit{}
-
-.example-form{
-  align-items: center;
-  text-align: center;
+  color: #111111;
 }
