--- a/src/app/accounts/accounts.component.html
+++ b/src/app/accounts/accounts.component.html
@@ -1,1 +1,96 @@
 
+<app-main-window page="Account">
+
+  <div class="container">
+
+    <div class="header">
+      <form [formGroup]="this.formSearch" class="form">
+        <button><i class="fa fa-search"></i></button>
+        <input matInput placeholder="Search for an account ..." formControlName="search"
+        (change)="this.search()" class="search">
+      </form>
+    </div>
+
+    <div class="content">
+      <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" >
+
+        <!--- Note that these columns can be defined in any order.
+              The actual rendered columns are set as a property on the row definition" -->
+
+        <!-- Position Column -->
+        <ng-container matColumnDef="id">
+          <th mat-header-cell *matHeaderCellDef> No. </th>
+          <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+        </ng-container>
+
+        <!-- Name Column -->
+        <ng-container matColumnDef="account">
+          <th mat-header-cell *matHeaderCellDef> Name </th>
+          <td mat-cell *matCellDef="let element"> {{element.account}} </td>
+        </ng-container>
+
+        <!-- Weight Column -->
+        <ng-container matColumnDef="iban">
+          <th mat-header-cell *matHeaderCellDef> Iban </th>
+          <td mat-cell *matCellDef="let element"> {{element.iban}} </td>
+        </ng-container>
+
+        <!-- Symbol Column -->
+        <ng-container matColumnDef="initialBalance">
+          <th mat-header-cell *matHeaderCellDef> I.Balance </th>
+          <td mat-cell *matCellDef="let element"> {{element.initialBalance }} </td>
+        </ng-container>
+
+        <!-- Symbol Column -->
+        <ng-container matColumnDef="amount">
+          <th mat-header-cell *matHeaderCellDef> C.Amount </th>
+          <td mat-cell *matCellDef="let element"> {{element.currentBalance}} </td>
+        </ng-container>
+
+        <!-- Symbol Column -->
+        <ng-container matColumnDef="owner">
+          <th mat-header-cell *matHeaderCellDef> Owner</th>
+          <td mat-cell *matCellDef="let element"> {{element.owner}} </td>
+        </ng-container>
+
+        <!-- Symbol Column -->
+        <ng-container matColumnDef="isActive">
+          <th mat-header-cell *matHeaderCellDef> Is Active </th>
+          <td mat-cell *matCellDef="let element"> {{element.isActive}} </td>
+        </ng-container>
+
+         <!-- Symbol Column -->
+         <ng-container matColumnDef="edit">
+          <th mat-header-cell *matHeaderCellDef> # </th>
+          <td mat-cell *matCellDef="let element">
+            <button mat-mini-fab matTooltip="Select an option" color="primary" [matMenuTriggerFor]="menu" >Opt</button>
+            <mat-menu #menu="matMenu">
+              <button mat-menu-item [routerLink]="['/balance/',1]"  >
+                <mat-icon color="primary">edit</mat-icon>
+                Edit
+              </button>
+              <button mat-menu-item  >
+                <mat-icon color="warn">remove_circle_outline</mat-icon>
+                Debit
+              </button>
+              <button mat-menu-item [routerLink]="['account/trans/credit/',1]" >
+                <mat-icon color="basic">add_circle_outline</mat-icon>
+                Credit
+              </button>
+              <mat-divider></mat-divider>
+              <button mat-menu-item (click)="removeAccount(element.id)" >
+                <mat-icon color="warn">delete</mat-icon>
+                Remove
+              </button>
+            </mat-menu>
+          </td>
+         </ng-container>
+
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
+    </div>
+
+  </div>
+</app-main-window>
